Implement contact editing functionality and loading state
- Added editContact method in ContactListComponent to open the modal for editing a contact.
- Updated AddEditContactComponent to handle both adding and editing contacts, with dynamic form title.
- Introduced loading state in the form submission button to indicate processing.
- Implemented updateContact method in ApiServiceService to handle contact updates via API.

--- a/src/app/pages/contact-list/contact-list.component.html
+++ b/src/app/pages/contact-list/contact-list.component.html
@@ -20,7 +20,12 @@
           <p class="card-text onest-regular">{{ contact.phoneNumber }}</p>
 
           <div class="d-flex gap-2">
-            <button class="btn btn-primary flex-grow-1">Edit</button>
+            <button
+              class="btn btn-primary flex-grow-1"
+              (click)="editContact(contact)"
+            >
+              Edit
+            </button>
             <button class="btn btn-danger flex-grow-1">Delete</button>
           </div>
         </div>
