--- a/src/app/shared/component/add-edit-contact/add-edit-contact.component.html
+++ b/src/app/shared/component/add-edit-contact/add-edit-contact.component.html
@@ -1,8 +1,10 @@
 <div class="p-4">
-  <h1 class="onest-bold mb-4">Add Contact</h1>
+  <h1 class="onest-bold mb-4">
+    @if (contact()) { Edit Contact } @else { Add Contact }
+  </h1>
   <form
     class="d-flex flex-column gap-3"
-    (ngSubmit)="onSubmit()"
+    (ngSubmit)="onSubmit().subscribe()"
     [formGroup]="updateContactForm"
   >
     <div class="form-group">
@@ -34,7 +36,11 @@
     </div>
     <div class="d-flex gap-2">
       <button type="submit" class="btn btn-primary flex-grow-1 onest-medium">
-        Save
+        @if (isLoading()) {
+        <div class="spinner-border spinner-border-sm" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        } @else { Save }
       </button>
       <button
         type="button"
