--- a/src/app/pages/contact-list/contact-list.component.html
+++ b/src/app/pages/contact-list/contact-list.component.html
@@ -1,6 +1,15 @@
 <section class="container border-1 shadow p-4 my-5">
-  <div class="d-flex justify-content-between align-items-center">
-    <h1 class="text-center onest-bold mb-5">Contact List</h1>
+  <div class="d-flex justify-content-between align-items-center mb-5">
+    <h1 class="text-center onest-bold mb-0">Contact List</h1>
+    <div class="w-50">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Search"
+        [value]="searchTerm()"
+        (input)="onSearchChange($event)"
+      />
+    </div>
     <button class="btn btn-primary" (click)="addContact()">Add Contact</button>
   </div>
   @if (isLoading()) {
